--- a/deeplearning_study/딥러닝_첫걸음_요약.md
+++ b/deeplearning_study/딥러닝_첫걸음_요약.md
@@ -40,6 +40,10 @@
   
 ## 4장 신경망과 분류
 
+- 신경망으로 분류 모델을 만들 때는 이진 분류(범주 2개)인지 다범주 분류(범주 3개 이상)인지에 따라 출력층 노드의 개수와 활성함수를 다르게 구성하는게 보통입니다.
+- 이진 분류 문제일 경우에는 출력 노드는 1개로 구성하고 활성함수로는 대개 시그모이드 함수를 사용합니다. 학습 데이터의 정답은 활성함수의 최대값과 최소값으로 변환합니다. 학습 규칙의 비용함수로는 Cross entropy 함수를 사용합니다.
+- 다범주 분류 문제에서는 출력 노드는 범주의 개수만큼 구성합니다. 출력 노드의 활성함수로는 소프트맥스 함수를 사용합니다. 학습 데이터의 정답은 one-hot 인코딩을 통해 벡터로 변환합니다. 학습 규칙의 비용함수로는 Cross entropy 함수를 사용합니다.
+
 ## 5장 딥러닝
 
 ## 6장 컨벌루션 신경망
