--- a/deeplearning_study/딥러닝_첫걸음_요약.md
+++ b/deeplearning_study/딥러닝_첫걸음_요약.md
@@ -46,4 +46,13 @@
 
 ## 5장 딥러닝
 
+- 딥러닝은 간단히 '심층 신경망을 이용한 머신러닝 기법'이라고 정의할 수 있습니다.
+- 기존의 신경망은 은닉층이 깊을수록(많을수록) 학습이 잘 안되어 성능이 오히려 떨어지는 문제가 있었습니다. 딥러닝은 이러한 문제를 해결했습니다.
+- 딥러닝의 탁월한 성과는 특정한 결정적 기술 덕분이 아니라, 여러 가지 작은 기술적 개선들이 모인 결과입니다.
+- 심층 신경망의 성능이 저하되는 이유는 학습이 제대로 되지 않아서입니다. 심층 신경망의 학습에 장애가 되는 요인은 크게 3가지입니다. 그래디언트 소실, 과적합, 많은 계산량.
+- 그래디언트 소실은 활성함수를 ReLU 함수로 바꾸고, 비용함수로 Cross Entropy 함수를 사용한 학습 규칙으로 학습시키면 대폭 개선됩니다. 수치해석적으로 개선된 경사 하강법을 사용하는 것도 도움이 됩니다. 
+- 심층 신경망은 과적합 문제에 더 취약합니다. 딥러닝에서는 드롭아웃 기법이나 정칙화를 통해 과적합 문제를 해결합니다.
+- 과도한 계산량으로 학습에 오랜 시간이 걸리는 문제는 GPU의 등장과 다양한 알고리즘 덕분에 상당 부분 극복되었습니다.
+
+
 ## 6장 컨벌루션 신경망
