오늘 읽은거 요약

--- a/deeplearning_study/딥러닝_첫걸음_요약.md
+++ b/deeplearning_study/딥러닝_첫걸음_요약.md
@@ -54,5 +54,11 @@
 - 심층 신경망은 과적합 문제에 더 취약합니다. 딥러닝에서는 드롭아웃 기법이나 정칙화를 통해 과적합 문제를 해결합니다.
 - 과도한 계산량으로 학습에 오랜 시간이 걸리는 문제는 GPU의 등장과 다양한 알고리즘 덕분에 상당 부분 극복되었습니다.
 
-
 ## 6장 컨벌루션 신경망
+
+- 머신러닝 기법의 영상 인식 성능을 높이려면 원본 입력 이미지 대신 특징이 부각된 이미지, 즉 특징 맵을 분류기에 입력해야 합니다. 그 동안 특징 추출기는 사람이 직접 설계하는 경우가 대부분이었습니다. 컨브넷은 특수한 형태의 신경망으로 구성된 특징 추출기를 포함하고 있고, 이 신경망의 가중치도 학습을 통해 결정합니다.
+- 특징 추출 신경망과 분류 신경망으로 구성된 컨브넷은 계층이 깊어 그 동안 제대로 학습시키기 어려웠지만, 딥러닝 기술 덕분에 이 문제를 해결하고 빠르게 발전하는 중입니다.
+- 컨브넷의 특징 추출 신경망은 컨벌루션 계층과 풀링 계층을 차례로 쌓은 형태로 되어 있습니다. 컨브넷은 2차원 이미지를 대상으로 하기 때문에 대부분의 연산이 개념적으로는 2차원상에서 이루어집니다.
+- 컨벌루션 계층은 컨벌루션 필터를 통해 입력 이미지에서 특징이 부각된 이미지를 만들어냅니다. 이 계층에서 출력하는 이미지의 개수는 포함된 컨벌루션 필터의 개수와 같습니다. 컨벌루션 필터의 실체는 2차원 행렬입니다.
+- 풀링 계층은 이미지의 크기를 줄이는 역할을 합니다. 입력 이미지에서 일정한 픽셀을 묶어 한 개의 대표값으로 바꾸는 방식을 사용합니다. 대표값은 주로 최대값이나 평균값으로 결정합니다. 
+
